v1.10.2/Getting Started/sdks-and-api-libraries.md
---
title: "SDKs and API Libraries"
slug: "sdks-and-api-libraries"
hidden: false
createdAt: "2021-08-31T18:33:22.917Z"
updatedAt: "2022-09-20T14:23:10.107Z"
---
[block:callout]
{
  "type": "danger",
  "body": "Warning: The Topl SDK libraries for the Dion mainnet and testnet, Toplnet and Valhalla respectively, are currently deprecated in order to focus new development on the new version of the Topl blockchain, Tetra. The Dion SDK libraries are usable, but it is highly recommended to focus new development through the [DAML](doc:daml) smart contract integration.",
  "title": "# Deprecated"
}
[/block]
#Overview 

Topl has a collection of tools which makes it easier to integrate with the Topl blockchain. Depending on the use-cases you have, you may use any of the components below.

#Getting Started
To get started, checkout the [📘 Topl User Guide](doc:introduction-2)

#Components

## SDKs/ Open Source Libraries

[block:parameters]
{
  "data": {
    "h-0": "name/link",
    "h-1": "description",
    "0-0": "[BramblJs](https://www.npmjs.com/package/brambljs)",
    "0-1": "Contains everything that you need for addresses and creating transactions in Javascript.",
    "1-0": "[BramblSc](https://github.com/Topl/Bifrost/tree/main/brambl)",
    "1-1": "Contains everything that you need for addresses and creating transactions in Scala.",
    "2-0": "[BramblPy](https://github.com/Topl/BramblPy)",
    "2-1": "Contains everything that you need for addresses and creating transactions in Python.  Currently in pre-release (is not recommended for production environments)",
    "3-0": "[BramblDart](https://github.com/Topl/BramblDart)",
    "3-1": "Contains everything that you need to manage addresses and create transactions in Dart. Currently in pre-release (it is not recommended for production environments)"
  },
  "cols": 2,
  "rows": 4
}
[/block]
# Recipes

Please see [Recipes](https://topl.readme.io/recipes) for examples on how to use the above resources.

# API Reference

If you are interested in seeing the low level JSON-RPC API to directly interact with the Topl Blockchain, please see the documentation located [here](https://topl.readme.io/reference).

# Contributing

See [Contributors](doc:contributors)